--- a/play_page.html
+++ b/play_page.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>播放页面</title>
+
+    <style>
+        .selection-container {
+            margin: 20px;
+            display: flex; /* 使用flexbox布局 */
+            flex-direction: row; /* 子元素水平排列 */
+            align-items: center; /* 垂直居中 */
+        }
+
+        .selection-container h3 {
+            margin-right: 10px; /* 给标题和按钮之间一些间距 */
+        }
+
+        .source-button, .episode-button {
+            margin: 5px;
+            padding: 10px;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, border-color 0.3s;
+            flex-shrink: 0; /* 防止按钮在容器空间不足时缩小 */
+        }
+
+        .selected {
+            background-color: #007BFF;
+            color: white;
+            border-color: #0056b3;
+        }
+    </style>
+
     <link rel="stylesheet" href="./css/play_page.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/hls.min.js"></script>
     <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js"></script>
@@ -35,35 +67,33 @@
     <div class="video-details">
         <!-- 视频海报图片 -->
         <div class="video-poster">
-            <img src="https://t1.021huaying.com/uploads/2023-08-25/4a/2a4767d7b67470c39c4e6355feef9ef7.webp" id = "video_poster"
+            <img src="https://t1.021huaying.com/uploads/2023-08-25/4a/2a4767d7b67470c39c4e6355feef9ef7.webp"
+                 id="video_poster"
                  alt="视频海报">
         </div>
 
         <!-- 视频信息区域 -->
         <div class="video-info">
-            <h2 class="video-title" id = 'video-title'>视频标题</h2>
-            <p class="video-description" id = "video-description">这是视频的简介部分。</p>
+            <h2 class="video-title" id='video-title'>视频标题</h2>
+            <p class="video-description" id="video-description">这是视频的简介部分。</p>
 
             <!-- 播放源选择 -->
-            <div class="source-selector">
-                <label for="source">选择播放源:</label>
-                <select id="source" class = ”select“>
-                    <option value="source1">源1</option>
-                    <option value="source2">源2</option>
-                    <option value="source3">源3</option>
-                </select>
+            <div class="filter-group">
+                <h3>选择播放源</h3>
+                <div class="filter-buttons" id="source">
+
+                </div>
             </div>
 
-            <!-- 集数选择 -->
-            <div class="episode-selector">
-                <label for="episode">选择集数:</label>
-                <select id="episode">
-                    <option value="1">第1集</option>
-                    <option value="2">第2集</option>
-                    <option value="3">第3集</option>
-                    <!-- 更多集数选项 -->
-                </select>
+            <div class="filter-group">
+                <h3>选择集数</h3>
+                <!--        <label for="type">类型：</label>-->
+                <div class="filter-buttons" id="episode">
+
+                </div>
             </div>
+
+
         </div>
     </div>
 </div>
