--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <button class="pagination-button" id="lastPage">末页</button>
         </div>
     </div>
-    <div class="option" id="containers">
+    <div class="option" id="containers" hidden="hidden">
         <!--            <h2>&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;最新上线·全网热播&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</h2>-->
     </div>
 </section>
