采用功能更强大的TCPlayer，功能更强大 修复首页显示问题

--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
     <div class="option" id="containers" hidden="hidden">
         <!--            <h2>&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;最新上线·全网热播&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</h2>-->
     </div>
+    <div class="option" id="firstpage_container" hidden="">
+        <!--            <h2>&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;最新上线·全网热播&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</h2>-->
+    </div>
 </section>
 
 <footer>
