--- a/play_page.html
+++ b/play_page.html
@@ -17,11 +17,17 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/social-share.js/1.0.16/css/share.min.css">
     <script src="https://cdn.staticfile.org/social-share.js/1.0.16/js/social-share.min.js"></script>
 
-    <link href="tcplayer/tcplayer.min.css" rel="stylesheet"/>
-    <!--如果需要在 Chrome 和 Firefox 等现代浏览器中通过 H5 播放 HLS 格式的视频，需要在 tcplayer.vx.x.x.min.js 之前引入 hls.min.x.xx.m.js。-->
-    <script src="tcplayer/libs/hls.min.1.1.7.js"></script>
 
-    <script src="tcplayer/tcplayer.v5.1.0.min.js"></script>
+    <link href="https://web.sdk.qcloud.com/player/tcplayer/release/v5.1.0/tcplayer.min.css" rel="stylesheet" />
+    <script src="https://web.sdk.qcloud.com/player/tcplayer/release/v5.1.0/tcplayer.v5.1.0.min.js"></script>
+
+<!--    加载本地用以下代码-->
+<!--    <link href="tcplayer/tcplayer.min.css" rel="stylesheet"/>-->
+<!--    &lt;!&ndash;如果需要在 Chrome 和 Firefox 等现代浏览器中通过 H5 播放 HLS 格式的视频，需要在 tcplayer.vx.x.x.min.js 之前引入 hls.min.x.xx.m.js。&ndash;&gt;-->
+<!--    <script src="tcplayer/libs/hls.min.1.1.7.js"></script>-->
+<!--    <script src="tcplayer/tcplayer.v5.1.0.min.js"></script>-->
+
+
     <script src="./js/common.js"></script>
 </head>
 <body>
