采用功能更强大的TCPlayer，功能更强大 修复首页显示问题

--- a/index.html
+++ b/index.html
@@ -113,12 +113,8 @@
 
 </head>
 <body>
-<script src="//sdk.51.la/js-sdk-integrate.min.js" crossorigin="anonymous" charset="UTF-8"></script>
-<div id="LA_INTEGRATE_BOX"></div>
-<script>
-const la_integrate = new LAIntegrate({ /* your options in here... */ })
-la_integrate.start();
-</script>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3KOv5ni0bEwNsU27",ck:"3KOv5ni0bEwNsU27"})</script>
 <header>
 <!--    <h1>电影视频网站</h1>-->
     <nav>
